[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ynabifier"
version = "0.1.0"
description = "Convert DKB CSV exports to YNAB-compatible CSV files."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Dennis Irrgang" },
]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = []

[project.scripts]
ynabifier = "ynabifier:main"

[tool.setuptools]
py-modules = ["ynabifier"]
